# IFIscripts

./: .gitignore  .readthedocs.yaml  README.rst  batchmakeshell.py  film_scan_aip_documentation.txt  ififuncs.py  pyproject.toml  setup.py
docs/: conf.py  installation.rst  usage.rst
docs/_build/doctrees/: contributing.doctree  credits.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/html/: .buildinfo  contributing.html  credits.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: contributing.rst.txt
docs/_build/html/_static/: documentation_options.js
ifiscripts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
legacy_scripts/: check_ffprobe.py  revtmd.py
scripts/: accession_register.py  aipcreator.py  as11fixity.py  batchaccession.py  batchaipcreator.py  batchdiff_framemd5.py  batchmakeshell.py  batchsc_aip_update.py  batchsc_checkdir.py  batchsc_fixity.py  batchsc_organise.py  batchsc_sip_update.py  batchsc_validate.py  batchsipcreator.py  batchvalidate.py  bitc.py  check_register.py  dcdm_helperpbcore.py  dcpaccess.py  deletefiles.py  framemd5.py  get_ps_list.py  getaips.py  getdip.py  ififuncs.py  loopline_repackage.py  lossy_check.py  makedip.py  makeffv1.py  makefolders.py  makepbcore.py  manifest.py  masscopy.py  massqc.py  merge_csv.py  mergepbcore.py  order.py  package_update.py  prores.py  rename_objects.py  (+7 more)
