[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ifiscripts"
version = "2023.07.11.12"
authors = [
  {name="Kieran O'Leary", email="kieran.o.leary@gmail.com"}
]
maintainers = [
  {name="Yazhou He", email="yhe@irishfilm.ie"}
]
description = "Scripts for processing moving image material in the Irish Film Institute/Irish Film Archive"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    'lxml',
    'bagit',
    'dicttoxml',
    'future',
    'clairmeta'
]

[tool.setuptools]
include-package-data = true
# [tool.setuptools.package-data]
# '*' = ['film_scan_aip_documentation.txt', '26_XYZ-22_Rec709.cube']

[tool.setuptools.package.find]
where = ['', 'scripts']

[project.scripts]
accession_register = 'accession_register:main'
aipcreator = 'aipcreator:main'
as11fixity = 'as11fixity:main'
batchaipcreator = 'batchaipcreator:main'
batchdiff_framemd5 = 'batchdiff_framemd5:main'
batchmakeshell = 'batchmakeshell:main'
batchsipcreator = 'batchsipcreator:main'
bitc = 'bitc:main'
concat = 'concat:main'
copyit = 'copyit:main'
dcpaccess = 'dcpaccess:main'
dcpfixity = 'dcpfixity:main'
deletefiles = 'deletefiles:main'
dfxml = 'dfxml:main'
durationcheck = 'durationcheck:main'
ffv1mkvvalidate = 'ffv1mkvvalidate:main'
framemd5 = 'framemd5:main'
ififuncs = 'ififuncs:main'
loopline_repackage = 'loopline_repackage:main'
make_mediaconch = 'make_mediaconch:main'
makedfxml = 'makedfxml:main'
makedip = 'makedip:main'
makeffv1 = 'makeffv1:main'
makepbcore = 'makepbcore:main'
makeuuid = 'makeuuid:main'
makezip = 'makezip:main'
manifest = 'manifest:main'
masscopy = 'masscopy:main'
massqc = 'massqc:main'
mergepbcore = 'mergepbcore:main'
multicopy = 'multicopy:main'
normalise = 'normalise:main'
Objects = 'Objects:main'
order = 'order:main'
package_update = 'package_update:main'
packagecheck = 'packagecheck:main'
prores = 'prores:main'
seq2ffv1 = 'seq2ffv1:main'
sipcreator = 'sipcreator:main'
strongbox_fixity = 'strongbox_fixity:main'
subfolders = 'subfolders:main'
testfiles = 'testfiles:main'
validate = 'validate:main'
walk_to_dfxml = 'walk_to_dfxml:main'

[project.urls]
"Homepage" = "https://github.com/Irish-Film-Institute/IFIscripts"
"Bug Tracker" = "https://github.com/Irish-Film-Institute/IFIscripts/issues"